fix disabled account notification

--- a/hit-networking-base/src/main/resources/templates/sendNotificationCreateUser.html
+++ b/hit-networking-base/src/main/resources/templates/sendNotificationCreateUser.html
@@ -97,7 +97,12 @@
   <div class="content">
 	<h2>Xin chào <strong>{{fullname}}</strong>,</h2>
 	<p>Chào mừng bạn đến với <strong>HIT Network</strong>!</p>
-	<p>Bạn đã được tạo một tài khoản với tên đăng nhập là <strong>{{username}}</strong>. Hãy thiết lập mật khẩu để bắt đầu sử dụng tài khoản nhé.</p>
+	<p>Bạn đã được tạo một tài khoản với tên đăng nhập là 
+  		<span style="display:inline-block; background-color:#fff2e6; color:#cc5200; font-size:18px; font-weight:bold; padding:4px 10px; border-radius:6px; border-left:4px solid #ff6b00;">
+    	{{username}}
+  	</span></p>
+    <p>Hãy thiết lập mật khẩu để bắt đầu sử dụng tài khoản nhé</p>
+
 	<p style="text-align: left;">
 		<a href="{{link-set-new-pass}}" class="button">Đặt mật khẩu</a>
 	</p>
