--- a/hit-networking-base/src/main/resources/templates/sendResetPassword.html
+++ b/hit-networking-base/src/main/resources/templates/sendResetPassword.html
@@ -96,12 +96,12 @@
   </div>
   <div class="content">
     <h2>Xin chào <strong>{{fullName}}</strong>,</h2>
-    <p>Chúng tôi đã nhận được yêu cầu đặt lại mật khẩu từ bạn.</p>
-    <p>Vui lòng nhấn vào liên kết bên dưới để thiết lập mật khẩu mới và bảo vệ tài khoản của bạn:</p>
+    <p>Chúng tôi đã nhận được yêu cầu đặt lại mật khẩu từ bạn</p>
+	<p>Để bảo vệ người dùng, tài khoản của bạn tạm thời bị vô hiệu hóa</p>
+    <p>Vui lòng nhấn vào liên kết bên dưới để thiết lập mật khẩu mới và bảo vệ tài khoản của bạn</p>
     <p style="text-align: left;">
       <a href="{{link-set-new-pass}}" class="button">Đặt lại mật khẩu</a>
     </p>
-    <p>Nếu bạn không yêu cầu đặt lại mật khẩu, vui lòng bỏ qua email này. Tài khoản của bạn sẽ không bị ảnh hưởng.</p>
     <p>Trân trọng,<br><strong>Hệ thống Quản lý CLB-HIT</strong></p>
   </div>
 
