fix display error at screen set password

--- a/hit-networking-base/src/main/resources/templates/resetPassword.html
+++ b/hit-networking-base/src/main/resources/templates/resetPassword.html
@@ -182,19 +182,19 @@
     const regex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$/;
 
     if (!regex.test(password)) {
-      errorMessage.textContent = "Password must be at least 8 characters long and include at least one uppercase letter, one lowercase letter, and one number.";
+      errorMessage.textContent = "Mật khẩu phải có ít nhất 8 ký tự, bao gồm chữ hoa, chữ thường và số.";
       return false;
     }
 
     if (password !== confirmPassword) {
-      errorMessage.textContent = "Passwords do not match. Please try again.";
+      errorMessage.textContent = "Mật khẩu xác nhận không khớp.";
       return false;
     }
 
     if (!token) {
-      if (confirm("Link đã hết hạn hoặc không hợp lệ.\nBạn có muốn chuyển đến trang đặt lại mật khẩu không?")) {
-			window.location.href = "https://hitnetwork.onrender.com/ForgotPassword";
-	  }
+      if (confirm("Liên không hợp lệ!.\nBạn có muốn chuyển đến trang đặt lại mật khẩu không?")) {
+            window.location.href = "https://hitnetwork.onrender.com/ForgotPassword";
+      }
       return false;
     }
 
@@ -210,19 +210,37 @@
         body: JSON.stringify({ newPassword: password })
       });
 
+      if (response.status === 403) {
+        if (confirm("Link đã hết hạn hoặc không hợp lệ.\nBạn có muốn chuyển đến trang đặt lại mật khẩu không?")) {
+          window.location.href = "https://hitnetwork.onrender.com/ForgotPassword";
+        }
+        return;
+      }
+
+      const data = await response.json().catch(() => ({}));
+
       if (!response.ok) {
-		if (confirm("Link đã hết hạn hoặc không hợp lệ.\nBạn có muốn chuyển đến trang đặt lại mật khẩu không?")) {
-			window.location.href = "https://hitnetwork.onrender.com/ForgotPassword";
-		}
-		return;
-	  }
+        if (data.message === "exception.user.activated") {
+          if (confirm("Bạn đã thực hiện đặt mật khẩu rồi!.\nBạn có muốn chuyển đến trang đặt lại mật khẩu không?")) {
+            window.location.href = "https://hitnetwork.onrender.com/ForgotPassword";
+          }
+          return;
+        }
 
+        if (data.message === "exception.user.same.password") {
+          errorMessage.textContent = "Không đặt giống mật khẩu cũ.";
+        } else {
+          errorMessage.textContent = data.message || "Có lỗi xảy ra. Vui lòng thử lại.";
+        }
 
-      // Nếu thành công
-      alert("Password set successfully!");
+        return;
+      }
+
+      // Thành công
+      alert("Đặt mật khẩu mới thành công!");
       window.location.href = "https://hitnetwork.onrender.com/";
     } catch (err) {
-      errorMessage.textContent = "Unexpected error occurred.";
+      errorMessage.textContent = "Lỗi không xác định. Vui lòng thử lại sau.";
     }
 
     return false;
